--- a/2DSpaceRemake/Packages/manifest.json
+++ b/2DSpaceRemake/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.adaptiveperformance.samsung.android": "5.0.0",
+    "com.unity.ads.ios-support": "1.0.0",
     "com.unity.ai.navigation": "2.0.4",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.mobile": "1.0.0",
@@ -9,6 +10,8 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.purchasing": "4.11.0",
     "com.unity.services.analytics": "5.1.1",
+    "com.unity.services.levelplay": "8.2.0",
+    "com.unity.services.push-notifications": "4.0.1",
     "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
